# newsletter-service

./: .gitignore  Cargo.toml  configuration.yml  docker-compose.yml
.github/workflows/: general.yml
migrations/: 20210207094713_create_subscriptions_table.sql
scripts/: create_migration.sh  init_db.sh  run_migrations.sh  wait_for_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs  test_helpers.rs
