[package]
name = "newsletter_service"
version = "0.1.0"
authors = ["Arkadiusz Żmudzin <arkadiusz.zmudzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_service"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
config = "0.10.1"
serde = { version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.10.0"
tokio = "0.2.2"
